force-app/main/default/objects/Exam_Missed_Question__c/Exam_Missed_Question__c.object-meta.xml
<CustomObject>
    <description>Questions that the candidate got wrong!</description>
    <label>Exam Missed Question</label>
    <nameField>
        <displayFormat>MQ-{000000}</displayFormat>
        <label>Missed Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Missed Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>