force-app/main/default/objects/Exam_Missed_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <length>5</length>
    <type>Text</type>
</CustomField>