force-app/main/default/objects/Exam_Missed_Question__c/fields/Exam_Question__c.field-meta.xml
<CustomField>
    <fullName>Exam_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam Question</label>
    <referenceTo>Exam_Question__c</referenceTo>
    <relationshipLabel>Exam Missed Questions</relationshipLabel>
    <relationshipName>Exam_Missed_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>