force-app/main/default/objects/Exam_Missed_Question__c/fields/Question_No__c.field-meta.xml
<CustomField>
    <fullName>Question_No__c</fullName>
    <label>Question No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>