force-app/main/default/objects/Exam_Missed_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>5120</length>
    <type>Html</type>
</CustomField>