force-app/main/default/objects/Exam_Missed_Question__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <formula>TEXT(Exam_Question__r.Exam_Section__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>