force-app/main/default/objects/Exam_Missed_Question__c/fields/Your_Answer__c.field-meta.xml
<CustomField>
    <fullName>Your_Answer__c</fullName>
    <label>Your Answer</label>
    <length>5</length>
    <type>Text</type>
</CustomField>